--- a/src/app/topbar/topbar.component.html
+++ b/src/app/topbar/topbar.component.html
@@ -4,12 +4,10 @@
         <fa-icon (click)="openNav()" [icon]="faPlusSquare" size="3x" class="squareIcon"></fa-icon>
     </div>
     <div class="row col-12 justify-content-center m-0 mt-2">
-        <div id="progressContainer" *ngIf="calcProcentOfGreen()" class="progress col-12 p-0 my-2">
-
-            <div id="progressBar" class="progress-bar text-dark bg-success" role="progressbar" [style.width.%]="calcProcentOfGreen()" aria-valuenow="" aria-valuemin="0" aria-valuemax="100">
-                <p id="progressText" class="position-absolute m-0">{{calcProcentOfGreen() + '%'}}</p>
+        <div id="progressContainer" class="progress col-12 p-0 my-2" *ngIf="!noteService.notes">
+            <div id="progressBar" class="progress-bar text-dark bg-success" role="progressbar" [style.width.%]="numberInProcent" aria-valuenow="" aria-valuemin="0" aria-valuemax="100">
+                <p id="progressText" class="position-absolute m-0">{{numberInProcent + '%'}}</p>
             </div>
         </div>
     </div>
 </header>
-<!-- The overlay -->
