--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -25,7 +25,13 @@
         </div>
     </div>
 </div>
-
+<div class="row col-12 justify-content-center m-0 mt-2">
+    <div id="progressContainer" class="progress col-12 p-0 my-2">
+        <div id="progressBar" class="progress-bar text-dark bg-success" role="progressbar" max="100" [ngStyle]="{'width': number + '%'}" name="progress-bar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100">
+            <p id="progressText" class="position-absolute m-0">{{number + '%'}}</p>
+        </div>
+    </div>
+</div>
 <div class="d-flex mt-2">
     <div class="row mt-3 ml-1 mr-1">
         <div *ngFor="let note of notes" class="card bg-light col-12 p-0">
