--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container-fluid">
+    <app-index></app-index>
     <router-outlet></router-outlet>
 </div>
