--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,35 +1,7 @@
-<div id="myNav" class="overlay">
-    <!-- Button to close the overlay navigation -->
-    <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
-
-    <!-- Overlay content -->
-    <div class="col-10">
-        <div class="form-group">
-            <label class="text-white" for="">title</label>
-            <input #title class="form-control" placeholder="title">
-        </div>
-        <div class="form-group">
-            <label class="text-white" for="">date</label>
-            <input type="date" #date class="form-control" placeholder="date">
-        </div>
-        <div class="form-group">
-            <label class="text-white" for="">context</label>
-            <input type="text" #context class="form-control" placeholder="context">
-        </div>
-        <div class="form-group">
-            <label class="text-white" for="">image</label>
-            <input type="file" #image class="form-control" placeholder="image">
-        </div>
-        <div class="form-group">
-            <input type="submit" class="form-control" (click)="add(title.value, date.value, context.value, image.files[0].name); title.value='';date.value='';context.value='';image.files[0].name=''" placeholder="submit">
-        </div>
-    </div>
-</div>
-
 <div class="d-flex mt-2">
     <div class="row mt-3 ml-1 mr-1">
         <div *ngFor="let note of notes" class="card bg-light mb-2 col-12 p-0">
-            <div class="d-flex">
+            <div class="d-flex card-box">
                 <div [ngClass]="{'red-bar': note.image == '../assets/img/vomited.svg', 'green-bar': note.image == '../assets/img/happy.svg' || note.image == '../assets/img/happy-real.svg', 'yellow-bar': note.image == '../assets/img/neutral.svg'}">
                 </div>
                 <div class="card-body p-0 pl-2 mt-2 col-11">
