--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -76,8 +76,13 @@
     font-size: 60px;
 }
 
+.card-box {
+    width: 100%;
+    height: 100%;
+}
+
 .red-bar {
-    min-height: 100px;
+    min-height: 100%;
     height: 100%;
     padding: 0;
     width: 10px;
@@ -85,7 +90,7 @@
 }
 
 .green-bar {
-    min-height: 100px;
+    min-height: 100%;
     height: 100%;
     padding: 0;
     width: 10px;
@@ -93,7 +98,7 @@
 }
 
 .yellow-bar {
-    min-height: 100px;
+    min-height: 100%;
     height: 100%;
     padding: 0;
     width: 10px;
@@ -109,7 +114,5 @@
     }
     .overlay .closebtn {
         font-size: 40px;
-        top: 15px;
-        right: 35px;
     }
 }
