added more mobile resposive layout #2 . added energi on load works right #5

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,4 +1,5 @@
 <div class="flexer">
-    <app-topbar class="fill"></app-topbar>
+    <app-topbar [notes]="Notes" (overlayWidth)="overlayWidth($event)" [numberInProcent]="numberInProcent" class="fill"></app-topbar>
 </div>
-<app-note></app-note>
+<app-overlay [overlayWidthInput]="Overlay" (Add)="add($event)" (overlayClose)="overlayWidth($event)"></app-overlay>
+<app-note [notes]="Notes"></app-note>
