--- a/src/app/overlay/overlay.component.scss
+++ b/src/app/overlay/overlay.component.scss
@@ -1,33 +1,3 @@
-body,
-head {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-.header {
-    width: 100%;
-    color: white;
-    justify-content: space-between;
-    .title {
-        margin-top: 12px;
-        font-weight: 500;
-        padding-left: 15px;
-    }
-    .squareIcon {
-        padding-top: 15px;
-        padding-right: 15px;
-    }
-    #progressBar p {
-        min-width: 100%;
-        left: 0;
-        font-size: 15px;
-    }
-}
-
-
-/* The Overlay (background) */
-
 .overlay {
     /* Height & width depends on how you want to reveal the overlay (see JS below) */
     height: 100%;
@@ -98,11 +68,13 @@ head {
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 
-@media screen and (max-height: 450px) {
+@media screen and (max-width: 450px) {
     .overlay a {
         font-size: 20px
     }
     .overlay .closebtn {
         font-size: 40px;
+        top: 0px;
+        right: 0px;
     }
 }
