--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -17,11 +17,18 @@
             <input type="text" #context class="form-control" placeholder="context">
         </div>
         <div class="form-group">
-            <label class="text-white" for="">image</label>
-            <input type="file" #image class="form-control" placeholder="image">
+            <label class="text-white" for="">Feeling</label>
+            <br>
+            <select #image>
+                <option value="happy.svg">happy</option>
+                <option value="happy-real.svg">real happy</option>
+                <option value="sad.svg">sad</option>
+                <option value="vomited.svg">vomited</option>
+                <option value="neutral.svg">neutral</option>
+              </select>
         </div>
         <div class="form-group">
-            <input type="submit" class="form-control" (click)="add(title.value, date.value, context.value, image.files[0].name); title.value='';date.value='';context.value='';image.files[0].name=''" placeholder="submit">
+            <input type="submit" class="form-control" (click)="add(title.value, date.value, context.value, image.value); title.value='';date.value='';context.value='';image.files[0].name=''" placeholder="submit">
         </div>
     </div>
 </div>
