styling to select box

--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -14,14 +14,14 @@
         </div>
         <div class="form-group">
             <label class="text-white" for="">context</label>
-            <input type="text" #context class="form-control" placeholder="context">
+            <textarea type="text" #context class="form-control" placeholder="context"></textarea>
         </div>
         <div class="form-group">
             <label class="text-white" for="">Feeling</label>
             <br>
-            <select #image>
+            <select #image class="form-control">
                 <option value="happy.svg">happy</option>
-                <option value="happy-real.svg">real happy</option>
+                <option value="happy-real.svg">really happy</option>
                 <option value="Sad.svg">sad</option>
                 <option value="vomited.svg">vomited</option>
                 <option value="neutral.svg">neutral</option>
