added smilies instead of select #7 and added muted timestamp #8

--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -5,8 +5,9 @@
                 <div [ngClass]="{'red-bar': note.image == '../assets/img/vomited.svg' || note.image == '../assets/img/Sad.svg', 'green-bar': note.image == '../assets/img/happy.svg' || note.image == '../assets/img/happy-real.svg', 'yellow-bar': note.image == '../assets/img/neutral.svg'}">
                 </div>
                 <div class="card-body p-0 pl-2 mt-2 col-11">
-                    <h5 class="card-title justify-content-end d-flex">{{note.title}}<img src="{{note.image}} " class="img ml-auto" alt="billed af humør ">
+                    <h5 class="card-title justify-content-end d-flex mb-0">{{note.title}}<img src="{{note.image}} " class="img ml-auto" alt="billed af humør ">
                     </h5>
+                    <p class="card-subtitle text-muted">{{note.date}}</p>
                     <p class="card-text ">{{note.context}}</p>
                 </div>
             </div>
