--- a/src/app/overlay/overlay.component.html
+++ b/src/app/overlay/overlay.component.html
@@ -9,26 +9,37 @@
             <input #title class="form-control" placeholder="title">
         </div>
         <div class="form-group">
-            <label class="text-white" for="">date</label>
-            <input type="date" #date class="form-control" placeholder="date">
-        </div>
-        <div class="form-group">
             <label class="text-white" for="">context</label>
             <textarea type="text" #context class="form-control" placeholder="context"></textarea>
         </div>
-        <div class="form-group">
+        <div class="form-group mb-5">
             <label class="text-white" for="">Feeling</label>
             <br>
-            <select #image class="form-control">
-                <option value="happy.svg">happy</option>
-                <option value="happy-real.svg">really happy</option>
-                <option value="Sad.svg">sad</option>
-                <option value="vomited.svg">vomited</option>
-                <option value="neutral.svg">neutral</option>
-              </select>
+            <div class="d-flex">
+                <label class="container">
+                            <input type="radio" checked="checked" value="happy.svg" name="radio">
+                            <img src="../assets/img/happy.svg" class="checkmark smily" alt="">
+                          </label>
+                <label class="container">
+                            <input type="radio" value="happy-real.svg" name="radio">
+                            <img src="../assets/img/happy-real.svg" class="checkmark smily" alt="">
+                          </label>
+                <label class="container">
+                            <input type="radio" name="radio" value="neutral.svg">
+                            <img src="../assets/img/neutral.svg" class="checkmark smily" alt="">
+                          </label>
+                <label class="container">
+                            <input type="radio" name="radio" value="Sad.svg">
+                            <img src="../assets/img/Sad.svg" class="checkmark smily" alt="">
+                          </label>
+                <label class="container">
+                            <input type="radio" name="radio" value="vomited.svg">
+                            <img src="../assets/img/vomited.svg" class="checkmark smily" alt="">
+                          </label>
+            </div>
         </div>
         <div class="form-group">
-            <input type="submit" class="form-control" (click)="add(title.value, date.value, context.value, image.value); title.value='';date.value='';context.value='';" placeholder="submit">
+            <input type="submit" class="form-control" (click)="add(title.value, Date.now(), context.value, image.value); title.value='';context.value='';" placeholder="submit">
         </div>
     </div>
 </div>
