--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -9,6 +9,7 @@
                     </h5>
                     <p class="card-subtitle text-muted">{{note.date}}</p>
                     <p class="card-text ">{{note.context}}</p>
+                    <button class="btn-primary col-2">edit</button>
                 </div>
             </div>
         </div>
