--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,5 +1,5 @@
 <div class="flexer">
     <app-topbar [notes]="Notes" (overlayWidth)="overlayWidth($event)" [numberInProcent]="numberInProcent" class="fill"></app-topbar>
 </div>
-<app-overlay [overlayWidthInput]="Overlay" (Add)="add($event)" (overlayClose)="overlayWidth($event)"></app-overlay>
+<!-- <app-overlay [overlayWidthInput]="Overlay" (Add)="add($event)" (overlayClose)="overlayWidth($event)"></app-overlay> -->
 <app-note [notes]="Notes"></app-note>
