--- a/V3-Angular/src/app/login/login.component.html
+++ b/V3-Angular/src/app/login/login.component.html
@@ -1,4 +1,6 @@
 ﻿<h2>Login</h2>
+<p>{{test()}}</p>
+
 <form (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="username">Username</label>
