--- a/V3-Angular/src/app/overlay/overlay.component.html
+++ b/V3-Angular/src/app/overlay/overlay.component.html
@@ -9,7 +9,7 @@
     <div class="col-10">
         <div class="form-group">
             <label class="text-white" for="">title</label>
-            <input #title class="form-control" placeholder="title">
+            <input #title class="form-control" autofocus="autofocus" placeholder="title">
         </div>
         <div class="form-group">
             <label class="text-white" for="">context</label>
