--- a/V3-Angular/src/app/topbar/topbar.component.html
+++ b/V3-Angular/src/app/topbar/topbar.component.html
@@ -1,6 +1,6 @@
 <header class="header col-12">
     <div class="row col-12 justify-content-between">
-        <h2 class="title">Powerbank</h2>
+        <h2 class="title col-9">Powerbank</h2>
         <fa-icon (click)="openNav()" [icon]="faPlusSquare" size="3x" class="squareIcon"></fa-icon>
     </div>
 
