--- a/V3-Angular/src/app/register/register.component.html
+++ b/V3-Angular/src/app/register/register.component.html
@@ -23,11 +23,11 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="confirmPassword">Confirm Password</label>
-        <input type="password" formControlName="password_confirmation" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
-        <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
-            <div *ngIf="f.confirmPassword.errors.required">Password is required</div>
-            <div *ngIf="f.confirmPassword.errors.minlength">Password must be at least 6 characters</div>
+        <label for="password_confirmation">Confirm Password</label>
+        <input type="password" formControlName="password_confirmation" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password_confirmation.errors }" />
+        <div *ngIf="submitted && f.password_confirmation.errors" class="invalid-feedback">
+            <div *ngIf="f.password_confirmation.errors.required">Password is required</div>
+            <div *ngIf="f.password_confirmation.errors.minlength">Password must be at least 6 characters</div>
         </div>
     </div>
     <div class="form-group">
