--- a/V3-Angular/src/styles.scss
+++ b/V3-Angular/src/styles.scss
@@ -5,4 +5,6 @@ $progress-height: 2rem;
 body {
     font-family: sans-serif;
     background-color: #e4e4e4;
+    height: 100%;
+    width: 100%;
 }
